--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10.2)
 project("nativedemo")
 
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/lib)
+
 add_library(
         native-lib
         SHARED
@@ -18,4 +20,6 @@ target_link_libraries(
 )
 
 message(${PROJECT_SOURCE_DIR})
+message(${PROJECT_BINARY_DIR})
 message(${CMAKE_SOURCE_DIR})
+message(${ANDROID_ABI})
