--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blood.nativedemo">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
@@ -16,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NativeDemo">
-        <activity android:name=".test.TestActivity"></activity>
+        <activity android:name=".gps.GpsActivity"></activity>
+        <activity android:name=".test.TestActivity" />
         <activity android:name=".LifecycleActivity" />
         <activity android:name=".property.PropertyActivity" />
         <activity android:name=".qrcode.QrcodeActivity" />
